crates/oxc_react_compiler/tests/snapshots/holey-array-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/holey-array-expr.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_STRING0 } from "shared-runtime";
function t(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		t0 = [
			,
			CONST_STRING0,
			props
		];
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: t,
	params: [{
		a: 1,
		b: 2
	}],
	isComponent: false
};
