crates/oxc_react_compiler/tests/snapshots/holey-array-pattern-dce.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/holey-array-pattern-dce.js
---
function t(props) {
	const [, foo] = props;
	return foo;
}
export const FIXTURE_ENTRYPOINT = {
	fn: t,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
