crates/oxc_react_compiler/tests/snapshots/hook-inside-logical-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hook-inside-logical-expression.js
---
function Component(props) {
	const user = useFragment(graphql`
        fragment F on T {
          id
        }
      `, props.user) ?? {};
	return user.name;
}
