crates/oxc_react_compiler/tests/snapshots/hook-property-load-local.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hook-property-load-local.js
---
function useFoo() {}
function Foo() {
	const name = useFoo.name;
	console.log(name);
	return name;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: []
};
