crates/oxc_react_compiler/tests/snapshots/hook-ref-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hook-ref-callback.js
---
import { c as _c } from "react/compiler-runtime";
import { useEffect, useRef } from "react";
function Component(props) {
	const $ = _c(1);
	const ref = useRef();
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = () => {
			ref.current = 42;
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	useFoo(t0);
}
function useFoo(x) {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
