crates/oxc_react_compiler/tests/snapshots/hooks-freeze-possibly-mutable-arguments.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hooks-freeze-possibly-mutable-arguments.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	const cond = props.cond;
	const x = props.x;
	let a;
	if (cond) {
		a = x;
	} else {
		let t0;
		if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
			t0 = [];
			$[0] = t0;
		} else {
			t0 = $[0];
		}
		a = t0;
	}
	useFreeze(a);
	useFreeze(a);
	call(a);
	return a;
}
function useFreeze(x) {}
function call(x) {}
