crates/oxc_react_compiler/tests/snapshots/hooks-with-React-namespace.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hooks-with-React-namespace.js
---
function Component() {
	const [x] = React.useState(1);
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
